# DemoMessanger-

./: Makefile  cities.json  package.json  pyproject.toml
backend/: __init__.py  __main__.py  conftest.py  socket_client.py  socket_server.py  utils.py
backend/api/: __init__.py
backend/api/users/v1/: __init__.py  cities.py  profile.py  tests.py  users_list.py
backend/api/users/v1/auth/: handlers.py  schemas.py  tests.py
backend/api/users/v1/friends/: handlers.py  schemas.py  tests.py
backend/api/users/v1/messages/: handlers.py  schemas.py  tests.py
backend/api/users/v1/profile/: handlers.py  schemas.py  tests.py
backend/config/: develop.py  tests.py
backend/models/: __init__.py  base.py  message.py  user.py
frontend/: package.json
frontend/src/: App.tsx  Friends.tsx  Header.tsx  Login.tsx  Main.tsx  Messages.tsx  Profile.tsx  Users.tsx  index.tsx  utils.tsx
my-app/: package.json
my-app/src/: App.tsx  Friends.tsx  Login.tsx
